--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-local": "ts-node-dev src/index.ts",
-    "build": "tsc -b"
+    "build": "tsc -b",
+    "start": "node build/index.js"
   },
   "author": "V Praveen Prakash",
   "license": "ISC",
