--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Build the Docker image
-      run: docker build -t omegle-clone .
+      run: docker build -t omegle-clone ./server
     - name: Push docker image
       run: docker push prawinpracash/omgele-clone:latest
                        
