--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Build the Docker image
-      run: docker build -t omegle-clone ./server
+      run: docker build -t prawinpracash/omegle-clone:latest ./server
     - name: Push docker image
       run: docker push prawinpracash/omegle-clone:latest
                        
